# cloth-simulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
shader/: pointsAndLines.frag  pointsAndLines.vert  shader.frag  shader.geom  shader.vert  triangles.frag  triangles.geom  triangles.vert
src/: Application.cpp  Application.hpp  Cloth.cpp  Cloth.hpp  MyApplication.cpp  MyApplication.hpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  SettingsWindow.cpp  SettingsWindow.hpp  Shader.cpp  Shader.hpp  VertexType.cpp  VertexType.hpp  World.cpp  World.hpp  glError.cpp  glError.hpp  main.cpp
